# NeoMoonwalk

./: Cargo.toml  README.md  STYLE_GUIDE.md  TODO.md  build_android.sh
bootstrap/: Cargo.toml
bootstrap/src/: app.rs  lib.rs  runner.rs  window.rs
example/: Cargo.toml
example/src/: main.rs
moonwalk/: Cargo.toml
moonwalk/src/: error.rs  lib.rs
moonwalk/src/batching/: common.rs  group.rs  mod.rs  submiter.rs
moonwalk/src/batching/shapes/: mod.rs  rect.rs
moonwalk/src/easy_gpu/: README.md  buffer.rs  context.rs  framebuffer.rs  mask.rs  matrix.rs  mod.rs  pass.rs  pipeline.rs  texture.rs
moonwalk/src/objects/: mod.rs  store.rs
moonwalk/src/rendering/: mod.rs  pipeline.rs  renderer.rs  shaders.rs  state.rs  vertex.rs
moonwalk/src/shaders/: bezier.wgsl  rect.wgsl  text.wgsl
moonwalk/src/textware/: cache.rs  error.rs  font.rs  mod.rs
platform/android/src/: MainActivity.java
