[package]
name = "moonwalk"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
glam = { version = "0.24", features = ["scalar-math", "bytemuck"] }
rustc-hash = "1.1"
thiserror = "1.0"
libc = "0.2"
raw-window-handle = "0.6"
wgpu = "24.0"
easy-gpu = { git = "https://github.com/solarmoff-afk/easy-gpu" }
# textware = { git = "https://github.com/solarmoff-afk/textware" }

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.8"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
